# ChangeLog for net-www/apache
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/apache/Attic/ChangeLog,v 1.56 2003/07/09 16:49:36 woodchip Exp $

*apache-2.0.47 (09 Jul 2003)

  09 Jul 2003; Donny Davies <woodchip@gentoo.org> apache-1.3.27-r1.ebuild,
  apache-1.3.27-r2.ebuild, apache-1.3.27.ebuild, apache-2.0.43-r1.ebuild,
  apache-2.0.44.ebuild, apache-2.0.45.ebuild, apache-2.0.47.ebuild:
  Bump to latest release.  Remove dev-util/yacc from DEPEND (I dont see
  what needs this).  Cosmetic clean-up of certificate creation message.

  22 Jun 2003; Paul de Vrieze <pauldv@gentoo.org> apache-1.3.27-r4.ebuild:
  Fix the compilation with versioned symbols in db

  17 Jun 2003; Donny Davies <woodchip@gentoo.org> apache-2.0.46.ebuild:
  Close #13191; GNU deprecated the -1 shortcuts (/me shakes head).
  Add fixes to use `getent' instead of grepping through /etc/{passwd,group}.

*apache-2.0.46 (28 May 2003)

  04 Jun 2003; Donny Davies <woodchip@gentoo.org> apache-2.0.46.ebuild:
  Close #12637.

  28 May 2003; Donny Davies <woodchip@gentoo.org> Manifest, apache-2.0.46.ebuild,
  files/apache-2.0.46-gentoo.diff:
  Chase latest release; re-diff the patch.

*apache-2.0.45 (06 Apr 2003)

  22 May 2003; Donny Davies <woodchip@gentoo.org> commonapache2.conf:
  Close #12006.

  06 Apr 2003; Donny Davies <woodchip@gentoo.org> apache-2.0.45.ebuild,
  files/apache-2.0.45-gentoo.diff, files/2.0.40/40_mod_ssl.conf,
  files/2.0.40/apache2.initd, files/2.0.40/commonapache2.conf:
  New version.  Added optional ldap mods, couple of small config
  file cleanups.  Fix bugs #17651, 17145. 

*apache-1.3.27-r4 (23 Feb 2003)

  26 Mar 2003; Thomas Raschbacher <lordvan@gentoo.org> apache-1.3.27-r[34].ebuild:
  changed mod_ssl_ver to 2.8.14 fixing bug #18172
  changed mod_ssl_ver in -r4 so that it doesn't contain apache version for ipv6 patch use
	
  25 Feb 2003; Donny Davies <woodchip@gentoo.org> apache.rc6, apache2.initd :