@@ -1,12 +1,4 @@
-MD5 1c8b93ff2f0158b1cc90c2b2eeaae2ed ChangeLog 11515
-MD5 e4c89cfcf1223c75beeacec2e0746c29 apache-1.3.27-r3.ebuild 7684
-MD5 74188cec9ad14af8d885555ed62d95e8 apache-1.3.27-r4.ebuild 8266
-MD5 91587791c6e5edaec632673b366ecb4f apache-2.0.46.ebuild 10479
-MD5 2a172257d6ea01087d6689c0110449b6 apache-2.0.47.ebuild 10550
-MD5 3f87dcb9d5abca78bc68a3825f331087 files/apache-1.3.27_db4_gentoo.patch 812
 MD5 f2c60b199c12729b25716ed451a24e38 files/apache-2.0.44-gentoo.diff 4895
-MD5 9dc40e1918a2d30a578ebf1653f7182c files/apache-2.0.45-gentoo.diff 5448
-MD5 c8c70224d0f41de7f02387f13911e539 files/apache-2.0.46-gentoo.diff 3963
 MD5 97c7a2efed7a3fd05614167426c495d9 files/apache-builtin-mods 2465
 MD5 df1290566bb25603dbe5a649daec5185 files/apache.confd 1012
 MD5 de4bb52edc581b44224e7006846aff43 files/apache.rc6 1021
@@ -14,13 +6,10 @@ MD5 02db12f0d91e1f89e0b173fea6c5151d files/apacheaddmod 5977
 MD5 bae4b9d941cd38a32943533e958aa1b3 files/apachedelmod 3185
 MD5 8d790bf68c47c08951c761815cd66a1c files/apachelogserverstatus 4763
 MD5 a90bef6fb0fb6d05f74c36eaf26285d6 files/apachesplitlogfile 4959
-MD5 10be9409287dd5848fd675c1d96d0f7c files/digest-apache-1.3.27-r3 211
-MD5 21c6ed7e53ea9fc80f4634cbf37b2bc6 files/digest-apache-1.3.27-r4 303
-MD5 b1b73cd67ed116ce0f9c973eeff9fbdf files/digest-apache-2.0.46 65
+MD5 78ec0e944bbdb4246ed75478e6d8e52a files/digest-apache-2.0.47 65
 MD5 df54361aa8754197cf3bafe99d32c7ec files/robots.txt 340
 MD5 d3626a1e31a675c60d066c111d552adf files/suexec.pam 59
 MD5 161245c7aa1eb785db53b34d6a10be43 files/suexec_pam_gentoo.patch 2149
-MD5 78ec0e944bbdb4246ed75478e6d8e52a files/digest-apache-2.0.47 65
 MD5 14aebf386646fe7ab2623dad993a32fa files/2.0.40/40_mod_ssl.conf 3420
 MD5 8ce666f3b8ad3ed00c081dc29e19fe90 files/2.0.40/41_mod_ssl.default-vhost.conf 8039
 MD5 819ee444395cf42ccc8009529a94af37 files/2.0.40/45_mod_dav.conf 583
@@ -44,3 +33,14 @@ MD5 f820076adb31912c060052154d08eecb files/conf/Vhosts.conf 1909
 MD5 c774e0c7ddc6d55bddc164a9b5af0cb6 files/conf/VirtualHomePages.conf 907
 MD5 f440f0a32308bc9dc9d9acd041c8b6c5 files/conf/apache.conf 7247
 MD5 e68da4777c0641e3bc5b284ee7f6fcf2 files/conf/commonapache.conf 22140
+MD5 10be9409287dd5848fd675c1d96d0f7c files/digest-apache-1.3.27-r3 211
+MD5 21c6ed7e53ea9fc80f4634cbf37b2bc6 files/digest-apache-1.3.27-r4 303
+MD5 9dc40e1918a2d30a578ebf1653f7182c files/apache-2.0.45-gentoo.diff 5448
+MD5 c8c70224d0f41de7f02387f13911e539 files/apache-2.0.46-gentoo.diff 3963
+MD5 b1b73cd67ed116ce0f9c973eeff9fbdf files/digest-apache-2.0.46 65
+MD5 3f87dcb9d5abca78bc68a3825f331087 files/apache-1.3.27_db4_gentoo.patch 812
+MD5 3a77185ae70b22310e8a70b9146aa979 apache-2.0.47.ebuild 10662
+MD5 93e615b21d0234cd0ef77a8bc43bfc35 ChangeLog 11612
+MD5 e4c89cfcf1223c75beeacec2e0746c29 apache-1.3.27-r3.ebuild 7684
+MD5 74188cec9ad14af8d885555ed62d95e8 apache-1.3.27-r4.ebuild 8266
+MD5 91587791c6e5edaec632673b366ecb4f apache-2.0.46.ebuild 10479
