@@ -1,6 +1,9 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/apache/Attic/apache-2.0.47.ebuild,v 1.1 2003/07/09 16:49:36 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/apache/Attic/apache-2.0.47.ebuild,v 1.2 2003/07/10 00:06:17 vapier Exp $
+
+inherit flag-o-matic
+has_version =sys-libs/glibc-2.2* && filter-flags -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE
 
 DESCRIPTION="Apache Web Server, Version 2.0.x"
 HOMEPAGE="http://www.apache.org/"
