@@ -1,8 +1,11 @@
 # ChangeLog for net-www/apache
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/apache/Attic/ChangeLog,v 1.56 2003/07/09 16:49:36 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/apache/Attic/ChangeLog,v 1.57 2003/07/10 00:06:17 vapier Exp $
 
 *apache-2.0.47 (09 Jul 2003)
+
+  09 Jul 2003; Mike Frysinger <vapier@gentoo.org> :
+  Filter out largefile support on glibc-2.2.x
 
   09 Jul 2003; Donny Davies <woodchip@gentoo.org> apache-1.3.27-r1.ebuild,
   apache-1.3.27-r2.ebuild, apache-1.3.27.ebuild, apache-2.0.43-r1.ebuild,
